fixed sidebar on mobile

--- a/components/sidebar/sidebar.module.sass
+++ b/components/sidebar/sidebar.module.sass
@@ -23,7 +23,7 @@
 .sidebarOpen
     transition: all 0.5s ease
     width: 10%
-    min-width: 8rem
+    min-width: 11rem
     color: $text-dark
     transition: all 0.5s ease
 
